feat: Fixed remaining apis & added a route to backend to serve front end code
